[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agi-core"
version = "0.1.0"
description = "Modular AGI Framework - A unified cognitive architecture integrating proven AI components"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "AdaoJOAQUIM" }
    ]
    keywords = [
        "agi", "artificial-intelligence", "cognitive-architecture",
            "llm", "agents", "memory", "reasoning"
            ]
            classifiers = [
                "Development Status :: 3 - Alpha",
                    "Intended Audience :: Developers",
                        "License :: OSI Approved :: MIT License",
                            "Programming Language :: Python :: 3.11",
                                "Programming Language :: Python :: 3.12",
                                    "Topic :: Scientific/Engineering :: Artificial Intelligence",
                                    ]
                                    dependencies = [
                                        "langchain>=0.1.0",
                                            "langgraph>=0.0.20",
                                                "llama-index>=0.10.0",
                                                    "chromadb>=0.4.0",
                                                        "openai>=1.0.0",
                                                            "anthropic>=0.18.0",
                                                                "pydantic>=2.0.0",
                                                                    "pydantic-settings>=2.0.0",
                                                                        "python-dotenv>=1.0.0",
                                                                            "tiktoken>=0.5.0",
                                                                                "tenacity>=8.0.0",
                                                                                    "httpx>=0.25.0",
                                                                                        "rich>=13.0.0",
                                                                                            "typer>=0.9.0",
                                                                                            ]

                                                                                            [project.optional-dependencies]
                                                                                            dev = [
                                                                                                "pytest>=7.0.0",
                                                                                                    "pytest-asyncio>=0.21.0",
                                                                                                        "pytest-cov>=4.0.0",
                                                                                                            "black>=23.0.0",
                                                                                                                "ruff>=0.1.0",
                                                                                                                    "mypy>=1.0.0",
                                                                                                                        "pre-commit>=3.0.0",
                                                                                                                        ]
                                                                                                                        all = [
                                                                                                                            "playwright>=1.40.0",
                                                                                                                                "e2b>=0.15.0",
                                                                                                                                    "whisper>=1.0.0",
                                                                                                                                    ]
                                                                                                                                    
                                                                                                                                    [project.urls]
                                                                                                                                    Homepage = "https://github.com/AdaoJOAQUIM/agi-core"
                                                                                                                                    Documentation = "https://github.com/AdaoJOAQUIM/agi-core#readme"
                                                                                                                                    Repository = "https://github.com/AdaoJOAQUIM/agi-core"
                                                                                                                                    Issues = "https://github.com/AdaoJOAQUIM/agi-core/issues"
                                                                                                                                    
                                                                                                                                    [tool.hatch.build.targets.wheel]
                                                                                                                                    packages = ["agi_core"]
                                                                                                                                    
                                                                                                                                    [tool.black]
                                                                                                                                    line-length = 100
                                                                                                                                    target-version = ["py311"]
                                                                                                                                    
                                                                                                                                    [tool.ruff]
                                                                                                                                    line-length = 100
                                                                                                                                    select = ["E", "F", "I", "N", "W"]
                                                                                                                                    
                                                                                                                                    [tool.mypy]
                                                                                                                                    python_version = "3.11"
                                                                                                                                    strict = true
                                                                                                                                    
                                                                                                                                    [tool.pytest.ini_options]
                                                                                                                                    asyncio_mode = "auto"
                                                                                                                                    testpaths = ["tests"]
